# BotConectingWifiSystem

./: .gitignore  BugFixes.txt  Buglist.txt  FIXED_BUGS.txt  LIGHT_VERSION_SUMMARY.md  README.md  bestes Zitat von Julius - Kopie.txt  config.h  esp1_node.cpp  esp3_node.cpp  hub_html.h
Doku/: 01_Netzwerk_und_Hotspot.md  04_Mobile_Web_UI.md  Bridge.md  Hardware.md  LIGHT_VERSION.md  README.md  Setup.md  Software.md  Teensy.md  USB_PROTOCOL.md  Webserver.md
Doku - Kopie/: Bridge.md  Hardware.md  README.md  Teensy.md  USB_PROTOCOL.md
ESP_Hub/: platformio.ini
ESP_Hub - Kopie/: platformio.ini
ESP_Hub - Kopie/data/: index.html
ESP_Hub - Kopie/include/: hub_config.h
ESP_Hub - Kopie/scripts/: pre_build_fs.py
ESP_Hub - Kopie/src/: CommandRouter.cpp  ConfigStore.cpp  HeartbeatService.cpp  PeerRegistry.cpp  TelemetryBuffer.cpp
ESP_Hub/data/: index.html
ESP_Hub/data_light/: index.html
ESP_Hub/include/: CommandRouter.h  ConfigStore.h  EspNowManager.h  HeartbeatService.h  PeerRegistry.h  StatusLeds.h  TelemetryBuffer.h  (+1 more)
ESP_Satellite/: UART_log.txt  platformio.ini
ESP_Satellite - Kopie/: UART_log.txt
ESP_base/: README.md  esp2_hub.cpp  espnow_mesh.h  platformio.ini
PC_Hub_Migration/: __init__.py  requirements.txt
V3.0/: 00_Uebersicht.md  01_Netzwerk_und_Hotspot.md  02_Satelliten_Firmware.md  03_PC_Hub_und_GUI.md  05_AI_Agent_Roadmap.md  README_PC_GUI_AGENT.md
shared/: config_default.json  config_schema.json  crc16.h  messages.h
shared - Kopie/: config_default.json
test/unit/: CMakeLists.txt  test_command_parser.cpp  test_crc16.cpp  test_messages.cpp
(+128 files in other folders)
